--- a/URCAndroid/AndroidManifest.xml
+++ b/URCAndroid/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ultimateremotecontrol.urcandroid"
     android:versionCode="1"
@@ -13,9 +14,10 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:allowBackup="false" >
         <activity
-            android:name=".SetupActivity"
+            android:name="com.ultimateremotecontrol.urcandroid.SetupActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +26,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DeviceListActivity"
+            android:name="com.ultimateremotecontrol.urcandroid.DeviceListActivity"
             android:label="@string/title_activity_device_list" >
+        </activity>
+        <activity
+            android:name="com.ultimateremotecontrol.urcandroid.DriveActivity"
+            android:label="@string/title_activity_drive"
+            android:screenOrientation="landscape"
+            >
         </activity>
     </application>
 
